# anonymousExperimentalCode

implementation/: Building.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
implementation/data/osm/: 10.points  3.points  4.points  5.points  6.points  7.points  8.points  9.points
implementation/figs/pointsets/: 1.ipe  bbg.ipe  checker.ipe  dataset.ipe  grouped.ipe  php3CTpvq.ipe  temperature-11-06-2024.ipe  uniform.ipe
implementation/oldResults/: 1DincreasingN.csv  2D_grouped.csv  2D_increasingN.csv  2D_increasingPhi.csv  2D_increasingR.csv  2D_realTest.csv  2D_testScenarios.csv  2D_testScenarios2.csv  groupedIncreasingAlpha1DRefined.csv  increasingN1D.csv  increasingN1DRefined.csv  increasingPhi1D.csv  increasingPhi1DRefined.csv  increasingS1D.csv  increasingS1DRefined.csv  temperatureData.csv  temperatureData2D.csv
implementation/release/: CMakeCache.txt
implementation/results/: 1DgroupedIncreasingAlpha.csv  1DincreasingN.csv  1DincreasingPhi.csv  1DincreasingS.csv  2D_bbg.csv  2D_bbgSynthetic.csv  2D_bbgSyntheticGrouped.csv  2D_bieleveld.csv  2D_grouped.csv  2D_increasingN.csv  2D_increasingPhi.csv  2D_increasingS.csv  2D_realRansom.csv  2D_realWalking.csv  2D_sciencePark.csv
implementation/results/oldResults/: 1DgroupedIncreasingAlpha.csv  1DincreasingN.csv  1DincreasingNReport.csv  1DincreasingPhi.csv  1DincreasingS.csv  2D_grouped.csv  2D_increasingN.csv  2D_increasingN_modified.csv  2D_increasingN_original.csv  2D_increasingPhi.csv  2D_increasingR.csv  2D_realRansom.csv  2D_realWalking.csv  2D_sciencePark.csv  chanReportRerun1DincreasingPhi.csv
implementation/src/: main.cpp  mem_size.hpp  ranking.cpp  ranking.hpp
implementation/src/1D/: arr_print.h  blocksFuncs.cpp  blocksFuncs.h  mode_arrangement.cpp  mode_arrangement.h  mode_chan.cpp  mode_chan.h  mode_rangeTree.cpp  mode_rangeTree.h  range_query.cpp  range_query.h
implementation/src/2D/: grid_simple.cpp  grid_simple.h  mode_naive.cpp  mode_naive.h  mode_query.cpp  mode_query.h  range_query.cpp  range_query.h
implementation/src/amc/: amc.cpp  amc.h
implementation/src/amc/grid/: cell.cpp  cell.hpp  grid.cpp  grid.hpp  (+7 more)
implementation/src/myRangeTree/: myRangeTree.cpp  myRangeTree.h
implementation/src/shared/: defs.cpp  defs.h  ipeStart.txt
implementation/src/tests/: 1d.cpp  1d.h  2d.cpp  2d.h  amc_test.cpp  dataReader.cpp  dataReader.h  mem_test.cpp  ranking_test.cpp  testFuncs.cpp  testFuncs.h
(+15 files in other folders)
